<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_manual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.PlayManuallyActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="#303030"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="13dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_title"
        android:textColor="#FF9800"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <Button-->
<!--        android:id="@+id/jumpToWin"-->
<!--        android:layout_width="75dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginEnd="15dp"-->
<!--        android:backgroundTint="#404040"-->
<!--        android:text="@string/jumptowin_btn"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/materialToolbar"-->
<!--        app:layout_constraintStart_toEndOf="@+id/jumpToLose"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/jumpToLose"-->
<!--        android:layout_width="75dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="#404040"-->
<!--        android:text="@string/jumptolose_btn"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/app_title"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/GeneratingMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/playmanualbg_desc"
            android:scaleType="centerInside"
            android:scaleX="2"
            android:scaleY="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/maxresdefault" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2">

            <Button
                android:id="@+id/shw_walls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:backgroundTint="#303030"
                android:text="@string/state_off"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/shw_walls"
                android:textAlignment="center"
                android:textColor="#FFEB3B"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shw_walls"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/shw_fullmaze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#303030"
                android:text="@string/state_off"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/shw_sol"
                app:layout_constraintStart_toEndOf="@+id/shw_walls"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/shw_fullmaze"
                android:textAlignment="center"
                android:textColor="#FFEB3B"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintHorizontal_bias="0.597"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/shw_fullmaze"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/shw_sol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:backgroundTint="#303030"
                android:text="@string/state_off"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/shw_sol"
                android:textAlignment="center"
                android:textColor="#FFEB3B"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shw_sol"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <edu.wm.cs.cs301.amazebyshamsullahahmadzai.generation.MazePanel
            android:id="@+id/maze_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topButtons" />

        <Button
            android:id="@+id/zoom_in"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:contentDescription="@string/zoomin_desc"
            app:icon="@drawable/zoom_in"
            app:iconTint="#FFEB3B"
            app:layout_constraintEnd_toStartOf="@+id/maze_view"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topButtons" />

        <Button
            android:id="@+id/zoom_out"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:contentDescription="@string/zoomout_desc"
            app:icon="@drawable/zoom_out"
            app:iconTint="#FFEB3B"
            app:layout_constraintStart_toEndOf="@id/maze_view"
            app:layout_constraintTop_toBottomOf="@+id/topButtons" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maze_view">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/move_up"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:contentDescription="@string/upBtn_desc"
                    android:insetLeft="8dp"
                    app:icon="@drawable/chevron"
                    app:iconTint="#FFEB3B" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/move_left"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:contentDescription="@string/leftBtn_desc"
                    app:icon="@drawable/chevron_left"
                    app:iconPadding="0dp"
                    app:iconTint="#FFEB3B" />

                <Button
                    android:id="@+id/jump_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/jumpBtn_desc"
                    app:icon="@drawable/jump_small_removebg_preview"
                    app:iconPadding="0dp"
                    app:iconTint="#FEEA3B" />

                <Button
                    android:id="@+id/move_right"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/rightBtn_desc"
                    android:insetLeft="30dp"
                    app:icon="@drawable/chevron_right"
                    app:iconPadding="0dp"
                    app:iconTint="#FFEB3B" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/voice_ctrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#303030"
            android:layout_marginBottom="2dp"
            android:onClick="startVoiceListener"
            android:text="@string/voice_ctrl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>